k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddos-protection
  namespace: ddos-protection
  labels:
    app: ddos-protection
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: http
  - port: 9090
    targetPort: metrics
    protocol: TCP
    name: metrics
  selector:
    app: ddos-protection
